# p4ai-ds

./: .gitignore  README.md  pyproject.toml  run.sh
.github/workflows/: deploy.yml
configs/: eda.yaml  style.yaml  train.yaml  train_baseline.yaml  train_cnn.yaml  train_lgbm.yaml
configs/datasets/: petfinder.yaml
results/reports/: train_baseline.json  train_cnn_fr_no_norm.json  train_cnn_fr_norm.json  train_lgbm.json  train_ml_catboost.json  train_ml_decision_tree.json  train_ml_xgboost.json
results/text_classification/bert/: text_distilbert_artifact.json  text_distilbert_classification_report.json  text_transformer_bert_base_uncased_cls_finetune_artifact.json  text_transformer_grid_comparison_partial.json  (+22 more)
scripts/: eda_air.py  eda_image.py  eda_salary.py  eda_text.py  gallery_export.py  preprocess.py  run_salary_ml.py  train_baseline.py  train_cnn.py  train_lgb.py  train_ml.py
scripts/text_classification/: train_bert.py  train_pipeline_grid.py  train_traditional_ml.py
src/: trainer.py
src/analysis/: __init__.py  ablation.py  gradcam.py  shap_analysis.py
src/datasets/: petfinder.py
src/eda/: air_pollution_eda.py  image_advanced.py  image_metadata.py  image_quality.py  salary_eda.py  tabular_context.py  text_context.py  theme.py
src/models/: cnn.py  ml_classifiers.py
src/preprocess/: align_breeds.py  image.py  tabular_preprocess.py
src/text_classification/: __init__.py  bert.py  pipeline_grid.py  traditional_ml.py
src/utils/: checkpoint.py  env.py  freeze.py  fsdp.py  general.py  gradient_clip.py  gradnorm.py  optimizer.py  reporting.py  tensorboard_writer.py
ui/: air-analysis.html  air-analysis.js  image.html  image.js  image_results.html  index.html  salary_dashboard.html  salary_dashboard.js  salary_ml_dashboard.html  salary_ml_dashboard.js  script.js  style.css  tabular.html  tabular.js  text.html  text.js  text_results.html  text_results.js
(+107 files in other folders)
