[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "petfinder-analysis"
version = "0.1.0"
description = "Exploratory Data Analysis for Petfinder Image Dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy>=1.26.4",
    "torchvision",
    "torchaudio",
    "tqdm",
    "pandas",
    "pyyaml",
    "wandb",
    "matplotlib",
    "seaborn",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
