[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "petfinder-analysis"
version = "0.1.0"
description = "Exploratory Data Analysis for Petfinder Image Dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy>=1.26.4",
    "tqdm",
    "pandas",
    "pyyaml",
    "matplotlib",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "scikit-learn>=1.7.2",
    "torchvision>=0.25.0",
    "lightgbm>=4.6.0",
    "pytest>=9.0.3",
    "shap>=0.46.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
